# youtube-mcp_server

./: .env.example  .gitignore  CLAUDE_DESKTOP_SETUP.md  MCP_QUICK_START_GUIDE.md  MCP_TROUBLESHOOTING_CARD.md  README.md  app.yaml  app.yaml.template  main.py  n8n_web_api_workflow.json  pyproject.toml  requirements.txt  start_mcp_for_inspector.py  start_mcp_simple.sh  test_youtube_api.py  web_api_wrapper.py
src/youtube_mcp/: __init__.py
